--- a/src/components/CleanComponents/ProfileHeadCard/ProfileHeadCard.scss
+++ b/src/components/CleanComponents/ProfileHeadCard/ProfileHeadCard.scss
@@ -1,17 +1,12 @@
 @import '../../../resources/modules/core/common/css/_mixins.scss';
 
-.cat__core__widget {
+.ProfileHeadCard {
   border: 0px solid $white;
   background: $white;
   position: relative;
   border-radius: .25rem;
   margin-bottom: 1.35rem;
 
-  &--border {
-    border: 1px solid $gray-border;
-  }
-
-  &__2 {
     &__head {
       height: rem(250);
       background: $gray-lighten-more;
@@ -35,4 +30,3 @@
       padding-bottom: 1px;
     }
   }
-}
