--- a/src/components/CleanComponents/SliderCard/SliderCard.scss
+++ b/src/components/CleanComponents/SliderCard/SliderCard.scss
@@ -2,6 +2,40 @@
 
 .sliderCard {
 
+  &--inverse {
+
+    .sliderCard {
+
+      &__item {
+        background-color: $white;
+      }
+
+      &__body {
+        color: $text;
+
+        h2 {
+          color: $text;
+        }
+
+        &:hover {
+          color: $text;
+        }
+      }
+    }
+
+    .slick-dots li button {
+      background: $default;
+    }
+
+    .slick-dots li.slick-active button {
+      background: $default;
+    }
+  }
+
+  &__item {
+    background-color: $default;
+  }
+
   &__body {
     display: block;
     height: rem(140);
@@ -9,6 +43,15 @@
     width: 100%;
     padding: rem(25) rem(30);
     overflow: hidden;
+    color: $white;
+
+    h2 {
+      color: white;
+    }
+
+    &:hover {
+      color: $white;
+    }
   }
 
   &__icon {
