--- a/src/components/Pages/MailApp/Mail.scss
+++ b/src/components/Pages/MailApp/Mail.scss
@@ -1,53 +1,8 @@
 @import '../../../resources/modules/core/common/css/_mixins.scss';
 
-.messaging {
+.mail {
   overflow-x: hidden;
   position: relative;
-
-  .avatar {
-    border-width: 2px;
-  }
-
-  .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-tab {
-    padding: 0;
-  }
-
-  .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar {
-    border-right: none;
-  }
-
-  .ant-tabs-bar {
-    width: 100%;
-  }
-
-  .ant-tabs-ink-bar {
-    background: none;
-  }
-
-  .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-tab {
-    margin: 0;
-  }
-
-  .ant-tabs-nav .ant-tabs-tab-active {
-    .messaging {
-      &__tab {
-        background: $default;
-        color: $white;
-      }
-
-      &__tab-name {
-        color: $white;
-      }
-
-      &__tab-time {
-        color: $white;
-      }
-
-      &__tab-text {
-        color: $white;
-      }
-    }
-  }
 
   &__sidebar {
     width: rem(320);
@@ -63,6 +18,49 @@
       width: 100%;
       border-right: none;
     }
+
+    .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-tab {
+      padding: 0;
+    }
+
+    .ant-tabs-vertical.ant-tabs-left > .ant-tabs-bar {
+      border-right: none;
+    }
+
+    .ant-tabs-bar {
+      width: 100%;
+    }
+
+    .ant-tabs-ink-bar {
+      background: none;
+    }
+
+    .ant-tabs-vertical > .ant-tabs-bar .ant-tabs-tab {
+      margin: 0;
+      color: $text-darken-more;
+    }
+
+    .ant-tabs-nav .ant-tabs-tab-active {
+      .mail {
+        &__tab {
+          background: $default;
+          color: $white;
+          text-align: left;
+        }
+
+        &__tab-name {
+          color: $white;
+        }
+
+        &__tab-time {
+          color: $white;
+        }
+
+        &__tab-text {
+          color: $white;
+        }
+      }
+    }
   }
 
   &__sidebar-header {
@@ -73,6 +71,7 @@
   &__tab {
     padding: rem(15) rem(15) rem(20);
     border-bottom: 1px solid $gray-border;
+    text-align: left;
     &:hover {
       background: $gray-lighten-more;
     }
@@ -81,9 +80,9 @@
       float: left;
     }
     &-content {
-      margin-left: rem(70);
       padding-top: rem(5);
     }
+
     &-time {
       color: $gray-darken;
       float: right;
@@ -107,13 +106,19 @@
     }
   }
 
-  &__content-wrapper {
-    margin-left:rem(14);
-    margin-right: rem(14);
+  &__content-header {
+    border-bottom: 1px solid #e8e8e8;
+    .ant-tabs-bar {
+      border: none;
+    }
   }
 
   &__content {
     margin-left: rem(320);
+    min-height: 700px;
+    .ant-tabs-bar {
+      margin-bottom: 0;
+    }
 
     @media (max-width: $md-max-width) {
       margin-left: 0;
@@ -127,24 +132,6 @@
 
   &__item {
     padding: rem(10) 0;
-
-    &--right {
-
-      .messaging__item-content {
-        margin-left: 0px;
-        margin-right: 70px;
-
-        &:after {
-          left: 100%;
-          border: rem(7) solid transparent;
-          border-left-color: #f2f4f8;
-        }
-      }
-
-      .messaging__item-avatar {
-        float: right;
-      }
-    }
   }
 
   &__item-avatar {
@@ -169,14 +156,5 @@
       border: rem(7) solid transparent;
       border-right-color: #f2f4f8;
     }
-
-
-  }
-
-  &__inner-img {
-    border-radius: 3px;
-    margin-bottom: rem(10);
-    max-width: rem(200);
-    margin-right: rem(5);
   }
 }
