structure refactoring / layout refactoring

--- a/src/resources/AntStyles/AntDesign/css/antd.scss
+++ b/src/resources/AntStyles/AntDesign/css/antd.scss
@@ -224,3 +224,7 @@ form .ant-select:only-child, form .ant-cascader-picker:only-child {
 .ant-collapse {
   background: transparent;
 }
+
+.ant-layout {
+  min-height: 100vh;
+}
