--- a/src/components/CleanComponents/Avatar/Avatar.scss
+++ b/src/components/CleanComponents/Avatar/Avatar.scss
@@ -14,6 +14,16 @@
     height: auto;
   }
 
+  &--20 {
+    width: rem(20);
+    height: rem(20);
+  }
+
+  &--25 {
+    width: rem(25);
+    height: rem(25);
+  }
+
   &--50 {
     width: rem(50);
     height: rem(50);
