--- a/src/resources/AntStyles/AntDesign/css/badge.scss
+++ b/src/resources/AntStyles/AntDesign/css/badge.scss
@@ -2,8 +2,8 @@
 @import '../../../mixins';
 
 /////////////////////////////////////////////////////////////////////////////////////////
-/*  ANT DESIGN OVERALL */
+/*  ANT DESIGN BADGE */
 
-button, input, select, textarea {
+.ant-badge-count {
   font-family: inherit;
 }
