--- a/src/resources/AntStyles/AntDesign/css/slider.scss
+++ b/src/resources/AntStyles/AntDesign/css/slider.scss
@@ -2,8 +2,8 @@
 @import '../../../mixins';
 
 /////////////////////////////////////////////////////////////////////////////////////////
-/*  ANT DESIGN OVERALL */
+/*  ANT DESIGN SLIDER */
 
-button, input, select, textarea {
-  font-family: inherit;
+.ant-slider-with-marks {
+  margin-bottom: 19px;
 }
