--- a/src/resources/AntStyles/AntDesign/css/calendar.scss
+++ b/src/resources/AntStyles/AntDesign/css/calendar.scss
@@ -4,6 +4,10 @@
 /////////////////////////////////////////////////////////////////////////////////////////
 /*  ANT DESIGN CALENDAR */
 
+.ant-calendar {
+  border: 1px solid #e9e9e9;
+}
+
 .events {
   list-style: none;
   margin: 0;
@@ -26,4 +30,12 @@
 
 .ant-fullcalendar-month-select {
   margin-left: 5px;
+}
+
+.ant-calendar-picker-container {
+  animation-duration: 0s !important;
+}
+
+.ant-calendar-range .ant-calendar-input-wrap {
+  height: 38px;
 }
