--- a/src/resources/AntStyles/AntDesign/antd.cleanui.scss
+++ b/src/resources/AntStyles/AntDesign/antd.cleanui.scss
@@ -1,2 +1,11 @@
-@import "css/antd.css";
-@import "css/calendar.css";
+@import "style/backtop.css";
+@import "style/badge.css";
+@import "style/calendar.css";
+@import "style/cascader.css";
+@import "style/dropdown.css";
+@import "style/form.css";
+@import "style/input.css";
+@import "style/modal.css";
+@import "style/select.css";
+@import "style/slider.css";
+@import "style/spin.css";
