--- a/src/components/Page/TopBar/LiveSearch/style.scss
+++ b/src/components/Page/TopBar/LiveSearch/style.scss
@@ -9,6 +9,7 @@
   width: 100%;
   height: 100%;
   background: rgba($white, 0.95);
+  line-height: 1.5;
 
   &--show {
     opacity: 1;
@@ -72,7 +73,7 @@
 
   &__option {
     display: inline-block;
-    margin-left: rem(26);
+    margin-right: rem(26);
     font-size: rem(14);
 
     &--checkbox {
