ant styles / breadcrumbs styles / loader fix

--- a/src/components/Page/Breadcrumb/style.scss
+++ b/src/components/Page/Breadcrumb/style.scss
@@ -1,18 +1,22 @@
 @import '../../../resources/mixins';
 
 .breadcrumbBar {
-  padding: rem(20);
+  padding: rem(10) rem(20);
   margin: rem(-20);
   margin-bottom: rem(20);
   background-color: $white;
 
-  @media (max-width: $sm-max-width) {
-    padding: rem(20) 0;
-    overflow-x: hidden;
+  &__path {
+    font-size: rem(18);
+    color: $black-lighten-more;
   }
 
-  &__path {
-    font-size: rem(21);
-    color: $black-lighten-more;
+  &__arrow {
+    display: inline-block;
+    margin: 0 rem(10);
+    &:after {
+      display: inline-block;
+      content: '·';
+    }
   }
 }
