--- a/src/resources/CleanStyles/Core/style/core.scss
+++ b/src/resources/CleanStyles/Core/style/core.scss
@@ -54,6 +54,11 @@ input[type=text], input[type=password], input[type=email], textarea {
   appearance: none !important;
 }
 
+label {
+  display: inline-block;
+  margin-bottom: 0;
+}
+
 // code element
 code {
   color: $text;
