--- a/src/resources/AntStyles/AntDesign/style/backtop.scss
+++ b/src/resources/AntStyles/AntDesign/style/backtop.scss
@@ -9,10 +9,7 @@
   bottom: rem(50);
 }
 
-.ant-collapse {
-  background: transparent;
+.ant-back-top-content {
+  border-radius: 5px;
 }
 
-.ant-layout {
-  min-height: 100vh;
-}
