--- a/src/resources/_antd.less
+++ b/src/resources/_antd.less
@@ -1,9 +1,11 @@
 // path to vanilla antd less styles
+// default variables https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 @import "~antd/dist/antd.less";
 
 // redefined ant design variables
 @body-background                : ;
 @font-family                    : ;
+@font-family-no-number          : ;
 @code-family                    : ;
 @font-size-base                 : 14px;
 @font-size-lg                   : 16px;
