--- a/src/resources/_mixins.scss
+++ b/src/resources/_mixins.scss
@@ -22,6 +22,8 @@ $blue-darken: #0072d6;
 $orange: #f2a654;
 $yellow: yellow;
 
+$menuBg: #001529;
+
 // Accent colors
 $default: #acb7bf;
 $primary: #0190fe;
