--- a/src/components/Page/Menu/style.scss
+++ b/src/components/Page/Menu/style.scss
@@ -1,34 +1,25 @@
 @import '../../../resources/mixins';
 
-.appMenu {
-  &__logo {
-    height: 64px;
-  }
-
-  &__navigation {
-    .ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow {
-      right: rem(66);
-    }
-
-    .ant-menu-inline .ant-menu-submenu-title {
-      padding-right: rem(70);
-    }
-
-    &.ant-menu-inline-collapsed {
-      .appMenu__item-title {
-        display: none;
-      }
-
-      .ant-menu-submenu > .ant-menu-submenu-title .ant-menu-submenu-arrow {
-        display: block;
-      }
-    }
-  }
-
-  &__icon {
+.menu {
+  &__collapseLabel {
     position: absolute;
-    right: rem(28);
-    width: rem(20);
-    top: rem(12);
+    top: 11px;
+    right: -40px;
+    height: 40px;
+    width: 40px;
+    background: $menuBg;
+    border-radius: 0 4px 4px 0;
+    color: $white;
+    line-height: 40px;
+    font-size: 18px;
+    text-align: center;
+    padding-right: 2px;
+    cursor: pointer;
+    pointer-events: all;
   }
+}
+
+.drawer-content {
+  overflow: visible;
+  background: $menuBg;
 }
