--- a/src/components/Page/TopBar/LiveSearch/style.scss
+++ b/src/components/Page/TopBar/LiveSearch/style.scss
@@ -59,16 +59,16 @@
     font-size: rem(64);
     background-color: transparent;
     font-weight: bold;
+    padding: 0;
     @media (max-width: $sm-max-width) {
       font-size: rem(40);
     }
   }
 
   &__options {
-    margin: 0;
+    margin: 0 0 rem(30);
     padding: 0;
     list-style: none;
-    margin-bottom: rem(10);
   }
 
   &__option {
