--- a/src/resources/AntStyles/AntDesign/style/layout.scss
+++ b/src/resources/AntStyles/AntDesign/style/layout.scss
@@ -4,10 +4,18 @@
 /////////////////////////////////////////////////////////////////////////////////////////
 /*  ANT DESIGN LAYOUT */
 
+.ant-layout {
+  min-height: 100vh;
+}
+
 .ant-layout-header {
   padding: 0;
 }
 
 .ant-layout-footer {
   padding: 0 rem(20);
+}
+
+.ant-collapse {
+  background: transparent;
 }
