--- a/src/pages/Apps/Mail/MailListPage/MailList/style.scss
+++ b/src/pages/Apps/Mail/MailListPage/MailList/style.scss
@@ -108,6 +108,7 @@
 
   &__content-header {
     border-bottom: 1px solid #e8e8e8;
+    height: 54px;
     .ant-tabs-bar {
       border: none;
     }
