--- a/src/components/Page/Footer/style.scss
+++ b/src/components/Page/Footer/style.scss
@@ -14,6 +14,13 @@
   &__copyright {
     float: right;
     display: inline-block;
+    position: relative;
+
+    @media(max-width: $xs-max-width) {
+      margin-top: rem(20);
+      float: none;
+    }
+
     img {
       float: left;
       width: 30px;
