--- a/src/components/Page/Menu/MenuSider/style.scss
+++ b/src/components/Page/Menu/MenuSider/style.scss
@@ -3,9 +3,20 @@
 .menuSider {
   &__logo {
     height: 64px;
+    background: $menuBg-darken;
+  }
+
+  &__logoContainer {
+    height: 64px;
+    padding: 12px 20px;
+    img {
+      height: 40px;
+    }
   }
 
   &__navigation {
+    margin-top: rem(15) !important;
+
     > .ant-menu-item-divider {
       margin: 0 23px !important;
     }
