--- a/src/resources/_mixins.scss
+++ b/src/resources/_mixins.scss
@@ -23,6 +23,7 @@ $orange: #f2a654;
 $yellow: yellow;
 
 $menuBg: #001529;
+$menuBg-darken: #000c17;
 
 // Accent colors
 $default: #acb7bf;
@@ -72,5 +73,5 @@ $md-min-width: 992px;
 $md-max-width: 991px;
 $sm-min-width: 768px;
 $sm-max-width: 767px;
-$xs-min-width: 544px;
-$xs-max-width: 543px;
+$xs-min-width: 576px;
+$xs-max-width: 575px;
