--- a/src/components/CleanComponents/PricingItem/style.scss
+++ b/src/components/CleanComponents/PricingItem/style.scss
@@ -31,6 +31,10 @@
       border-radius: 6px;
       border-left: 1px solid $gray-border !important;
       overflow: hidden;
+
+      @media(max-width: $xl-max-width) {
+        margin: 0;
+      }
     }
     &--default {
       background: $default;
