packages cleaning / rewired

--- a/src/resources/AntStyles/AntDesign/antd.cleanui.scss
+++ b/src/resources/AntStyles/AntDesign/antd.cleanui.scss
@@ -1,13 +1,13 @@
-@import "style/backtop.css";
-@import "style/badge.css";
-@import "style/calendar.css";
-@import "style/cascader.css";
-@import "style/dropdown.css";
-@import "style/form.css";
-@import "style/input.css";
-@import "style/modal.css";
-@import "style/select.css";
-@import "style/slider.css";
-@import "style/spin.css";
-@import "style/layout.css";
-@import "style/notification.css";
+@import "style/backtop.scss";
+@import "style/badge.scss";
+@import "style/calendar.scss";
+@import "style/cascader.scss";
+@import "style/dropdown.scss";
+@import "style/form.scss";
+@import "style/input.scss";
+@import "style/modal.scss";
+@import "style/select.scss";
+@import "style/slider.scss";
+@import "style/spin.scss";
+@import "style/layout.scss";
+@import "style/notification.scss";
