--- a/src/components/LayoutComponents/Footer/style.scss
+++ b/src/components/LayoutComponents/Footer/style.scss
@@ -3,6 +3,8 @@
 .footer {
   background: $gray-border;
   padding: rem(40) rem(20) rem(30);
+  margin-left: rem(20);
+  margin-right: rem(20);
   border-radius: 5px 5px 0 0;
 
   &__bottom {
