--- a/src/resources/AntStyles/AntDesign/style/layout.scss
+++ b/src/resources/AntStyles/AntDesign/style/layout.scss
@@ -6,6 +6,7 @@
 
 .ant-layout {
   min-height: 100vh;
+  background: transparent;
 }
 
 .ant-layout-header {
@@ -13,7 +14,8 @@
 }
 
 .ant-layout-footer {
-  padding: 0 rem(20);
+  padding: 0;
+  background: transparent;
 }
 
 .ant-collapse {
