--- a/src/resources/CleanStyles/Core/style/settings.scss
+++ b/src/resources/CleanStyles/Core/style/settings.scss
@@ -8,6 +8,14 @@ body.fixedWidth {
     max-width: 1420px;
     margin: 0 auto;
   }
+
+  @media (min-width: 1440px) {
+    .ant-layout-sider {
+      border-left: 1px solid $gray-border;
+      border-right: 1px solid $gray-border;
+      box-sizing: content-box;
+    }
+  }
 }
 
 body.squaredBorders {
@@ -21,6 +29,7 @@ body.menuShadow {
     position: relative;
     z-index: 1;
     box-shadow: 0 0 200px -20px rgba(57,55,73,.4);
+    border-color: $white !important;
   }
 }
 
@@ -33,5 +42,42 @@ body.borderedCards {
 
   .card {
     border-top: 4px solid $success;
+  }
+}
+
+body.menuHorizontal {
+  &.fixedWidth {
+    .utils__content {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .breadcrumbBar, .footer {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+    }
+  }
+}
+
+body.themeLight {
+  .ant-layout-sider-trigger {
+    background: $gray-border;
+    color: inherit;
+  }
+
+  .ant-layout-sider {
+    background: $white;
+  }
+
+  .ant-menu {
+    color: $text;
+  }
+
+  .ant-menu-item > a {
+    color: $text;
+  }
+
+  .drawer-content {
+    background: $white !important;
   }
 }
