--- a/src/pages/DefaultPages/LoginAlphaPage/LoginAlpha/style.scss
+++ b/src/pages/DefaultPages/LoginAlphaPage/LoginAlpha/style.scss
@@ -3,6 +3,7 @@
 .login {
   background-size: cover;
   background-color: $gray-lighten-more;
+  background-position: center center;
 
   &--fullscreen {
     position: fixed;
