routes / menu styles fix / default layout state

--- a/src/components/LayoutComponents/Menu/style.scss
+++ b/src/components/LayoutComponents/Menu/style.scss
@@ -45,4 +45,9 @@
   .ant-layout-sider {
     box-shadow: none !important;
   }
+
+  .ant-menu {
+    color: $text;
+    border-right: none !important;
+  }
 }
