--- a/src/resources/CleanStyles/Core/style/settings.scss
+++ b/src/resources/CleanStyles/Core/style/settings.scss
@@ -11,9 +11,14 @@ body.fixedWidth {
 
   @media (min-width: 1440px) {
     .ant-layout-sider {
-      border-left: 1px solid $gray-border;
-      border-right: 1px solid $gray-border;
+      border-left: 1px solid $gray-border !important;
+      border-right: 1px solid $gray-border !important;
       box-sizing: content-box;
+    }
+
+    .ant-menu {
+      color: $text;
+      border-right: none !important;
     }
   }
 }
@@ -29,7 +34,6 @@ body.menuShadow {
     position: relative;
     z-index: 1;
     box-shadow: 0 0 200px -20px rgba(57,55,73,.4);
-    border-color: $white !important;
   }
 }
 
@@ -67,10 +71,14 @@ body.themeLight {
 
   .ant-layout-sider {
     background: $white;
+    border-right: 1px solid $gray-border;
   }
 
-  .ant-menu {
-    color: $text;
+  &:not(.menuCollapsed) {
+    .ant-menu {
+      color: $text;
+      border-right: none;
+    }
   }
 
   .ant-menu-item > a {
