--- a/src/pages/Apps/GitHub/GitHubDiscussPage/GitHubDiscuss/style.scss
+++ b/src/pages/Apps/GitHub/GitHubDiscussPage/GitHubDiscuss/style.scss
@@ -1,6 +1,8 @@
 @import '../../../../../resources/mixins';
 
 .discuss {
+  max-width: rem(1000);
+  margin: 0 auto;
 
   &__header {
     position: relative;
