--- a/src/resources/CleanStyles/Core/style/core.scss
+++ b/src/resources/CleanStyles/Core/style/core.scss
@@ -90,7 +90,7 @@ button, input, select, textarea {
 
   // main container
   &__content {
-    padding: rem(20);
+    padding: rem(30);
 
     @media (max-width: $sm-max-width) {
       padding: rem(20) 0;
@@ -269,7 +269,8 @@ button, input, select, textarea {
   // ant design example blocks
   &__codeCollapse {
     .ant-collapse > .ant-collapse-item.ant-collapse-no-arrow > .ant-collapse-header {
-      padding-left: rem(18);
+      padding-left: rem(30);
+      padding-right: rem(30);
     }
 
     .ant-collapse-borderless > .ant-collapse-item {
